--- a/css/media.css
+++ b/css/media.css
@@ -183,4 +183,13 @@
         width: 200px;
         height: 200px;
     }
+        .box-gradient{
+        position: relative;
+        width: 200px;
+        height: 300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: 0.5s;
+    }
 }
