--- a/css/media.css
+++ b/css/media.css
@@ -183,13 +183,30 @@
         width: 200px;
         height: 200px;
     }
-        .box-gradient{
-        position: relative;
-        width: 200px;
-        height: 300px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    .box-gradient::before{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 10px;
+        width: 30%;
+        height: 75%;
+        background: #F7EF8A;;
+        border-radius: 8px;
+        transform: skewX(15deg);
+        transition: 0.5s;
+    }
+    .box-gradient::after{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 10px;
+        width: 30%;
+        height: 75%;
+        background: #462626;
+        border-radius: 8px;
+        transform: skewX(15deg);
+        transform: 0.5s;
+        filter: blur(30px);
         transition: 0.5s;
     }
 }
