--- a/css/media.css
+++ b/css/media.css
@@ -209,4 +209,17 @@
         filter: blur(30px);
         transition: 0.5s;
     }
+        .box-gradient .content{
+        z-index: 1;
+        position: relative;
+        left: 0;
+        padding: 20px 40px;
+        background: rgba(0,0,0,0.1);
+        border-radius: 8px;
+        backdrop-filter: blur(10px);
+        z-index: 1;
+        transition: 0.5s;
+        width: 200px;
+        height: 300px;
+    }
 }
