--- a/css/media.css
+++ b/css/media.css
@@ -185,9 +185,9 @@
     }
     .box-gradient::before{
         content: '';
-        position: absolute;
+        position: relative;
         top: 0;
-        left: 10px;
+        left: 0px;
         width: 30%;
         height: 75%;
         background: #F7EF8A;;
@@ -197,9 +197,9 @@
     }
     .box-gradient::after{
         content: '';
-        position: absolute;
+        position: relative;
         top: 0;
-        left: 10px;
+        left: 0px;
         width: 30%;
         height: 75%;
         background: #462626;
