--- a/css/media.css
+++ b/css/media.css
@@ -197,7 +197,7 @@
     }
     .box-gradient::after{
         content: '';
-        position: relative;
+        position: absolute;
         top: 0;
         left: 0px;
         width: 30%;
@@ -211,7 +211,7 @@
     }
         .box-gradient .content{
         z-index: 1;
-        position: relative;
+        position: absolute;
         left: 0;
         padding: 0px 0px;
         background: rgba(0,0,0,0.1);
