--- a/css/media.css
+++ b/css/media.css
@@ -185,12 +185,16 @@
     }
         .box-gradient{
         position: absolute;
-        width: 300px;
-        height: 400px;
+        width: 30%;
+        height: 75%;
         display: flex;
         justify-content: center;
         align-items: center;
         transition: 0.5s;
+    }
+    .box-gradient:nth-child(3)::before,
+    .box-gradient:nth-child(3)::after{
+        padding-left: 10px;
     }
     .box-gradient::before{
         content: '';
