--- a/css/media.css
+++ b/css/media.css
@@ -186,7 +186,7 @@
         .box-gradient{
         position: absolute;
         width: 30%;
-        height: 75%;
+        height: 400px;
         display: flex;
         justify-content: center;
         align-items: center;
