--- a/css/media.css
+++ b/css/media.css
@@ -185,7 +185,7 @@
     }
         .box-gradient{
         position: absolute;
-        width: 100%;
+        width: 300px;
         height: 400px;
         display: flex;
         justify-content: center;
@@ -198,7 +198,7 @@
     }
     .box-gradient::before{
         content: '';
-        position: relative;
+        position: absolute;
         top: 0;
         left: 0px;
         width: 30%;
