--- a/css/main.css
+++ b/css/main.css
@@ -307,7 +307,7 @@ p3{
 }
 .container-glass .card{
     position: relative;
-    max-width: 540px;
+    max-width: 560px;
     height: 400px;
     box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
     border-radius: 15px;
@@ -318,13 +318,19 @@ p3{
     align-items: center;
     backdrop-filter: blur(5px);
     transition: 0.5s;
-}
-
+    padding-left: -500px;
 }
 .container-glass .card:nth-child(1)::before,
 .container-glass .card:nth-child(1)::after{
     background: linear-gradient(315deg, #cb5e5e,#521e24);
     left: 10px;
+    padding-right: 50px;
+}
+.container-glass .card:nth-child(2)::before,
+.container-glass .card:nth-child(2)::after{
+    background: linear-gradient(315deg, #cb5e5e,#521e24);
+    left: 10px;
+    padding-right: 50px;
 }
 
 .container-glass .card:hover{
