--- a/css/Hollywood.css
+++ b/css/Hollywood.css
@@ -128,6 +128,7 @@ body{
     transition: 0.5s;
     align-self: center;
     justify-self: center;
+    margin-left: 10px;
 }
 .card-name{
     display: flex;
@@ -327,13 +328,18 @@ body{
         padding: 40px;
     }
 }
-@media( max-width: 420px){
+@media( max-width: 430px){
     .card-Hollywood .content{
         padding: 30px;
     }
     .card-Hollywood:hover img,
     .card-Hollywood:hover .GFimg {
         height: 300px;
+    }
+
+    .card-hero{
+        width: 90%;
+        margin-left: 10px;
     }
 }
 
