--- a/css/Hollywood.css
+++ b/css/Hollywood.css
@@ -338,7 +338,8 @@ body{
     }
 
     .card-hero{
-        width: 90%;
+        width: 92%;
+        height: 110%;
         margin-left: 10px;
     }
 }
