--- a/css/Hollywood.css
+++ b/css/Hollywood.css
@@ -128,7 +128,7 @@ body{
     transition: 0.5s;
     align-self: center;
     justify-self: center;
-    margin-left: 10px;
+    padding-left: 10px;
 }
 .card-name{
     display: flex;
